update OAS / regenerate Swift SDK
